function : random RGB

--- a/src/components/Pickkasso.module.css
+++ b/src/components/Pickkasso.module.css
@@ -1,8 +1,6 @@
 .container {
-  box-sizing: border-box;
+  width: 600px;
+  height: 764px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 700px;
-  width: 700px;
+  flex-flow: row wrap;
 }
