--- a/src/components/BoxDetail.module.css
+++ b/src/components/BoxDetail.module.css
@@ -1,5 +1,9 @@
-.box {
+.boxes {
   width: calc(50% - 2px);
   height: calc(50% - 2px);
   margin: 1px;
+}
+
+.unique {
+  background-color: yellow;
 }
